# sudo-pour-me-a-drink

./: .gitignore  .gitmodules  Jenkinsfile  Makefile  README.md  drinks.tex  pyproject.toml  run
recipes/Aperol/: candyTrail.yaml
recipes/Gin/: aviation.yaml  basilSmash.yaml  bramble.yaml  cloverClub.yaml  corpseReviverNo2.yaml  greenEyes.yaml  greenGhost.yaml  lastWord.yaml  negroni.yaml  skyIsTheLemon.yaml  smokeyMartini.yaml  smokyMartini.yaml  southside.yaml
recipes/Rum/: longIslandIcedTea.yaml  rastafire.yaml  thePresident.yaml
recipes/Tequila/: strawberryFields.yaml
recipes/Vermouth/: noMerica.yaml
recipes/Vodka/: caipiroska.yaml  cosmolab.yaml  sexOnTheBeach.yaml
recipes/Whiskey/: bellini.yaml  bloodAndSand.yaml  bobbyBurns.yaml  needleInTheHay.yaml  robRoy.yaml  rustyNail.yaml
sudo_pour_me_a_drink/: __main__.py
sudo_pour_me_a_drink/recipes/Aperol/: aperolSour.yaml
sudo_pour_me_a_drink/recipes/Gin/: aviation.yaml  bramble.yaml  cloverClub.yaml  negroni.yaml  skyIsTheLemon.yaml  sonzasWilson.yaml
sudo_pour_me_a_drink/recipes/Rum/: longIslandIcedTea.yaml  president.yaml  rastafire.yaml
sudo_pour_me_a_drink/recipes/Tequila/: strawberryFields.yaml
sudo_pour_me_a_drink/recipes/Vermouth/: noMerica.yaml
sudo_pour_me_a_drink/recipes/Vodka/: harveyWallbanger.yaml  sexOnTheBeach.yaml  spitfire.yaml
sudo_pour_me_a_drink/recipes/Whiskey/: cactusJack.yaml  expat.yaml  greenpoint.yaml  innuendo.yaml  (+5 more)
sudo_pour_me_a_drink/typesetter/: CMakeLists.txt  cocktails.tex  template.py  template.tex
typesetter/: __init__.py  template.py  template.tex
