[tool.poetry]
name = "sudo_pour_me_a_drink"
version = "0.1.0"
description = ""
authors = ["Jacob-House <jacob.house@verafin.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
black = "^19.10b0"
isort = "^4.3.21"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
